# gearbox

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  deny.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
crates/gearbox/: Cargo.toml  README.md
crates/gearbox/src/: attest.rs  audit.rs  bundle.rs  catalog.rs  jcs.rs  lib.rs  main.rs  policy.rs  resolve.rs  server.rs  signing.rs  store.rs
crates/gearbox/tests/: attest.rs  audit.rs  bundle.rs  catalog.rs  policy.rs  resolve.rs  server.rs  store.rs  vector.rs
docs/adr/: ADR-0001-pluggable-cog-stores.md  ADR-0002-store-info-and-tofu.md  ADR-0003-managed-mode-policy.md  README.md
docs/cross-repo/: README.md
docs/cross-repo/cogs/: A1-path-manifest-field.md  A3-catalog-ci-gate.md
docs/cross-repo/seed/: B2-fetcher-trait.md  (+6 more)
docs/plans/: phase-1-implementation.md  phase-2-implementation.md  phase-3-implementation.md  pluggable-cog-stores.md
docs/protocol/: cog-store-protocol.md
docs/research/: cog-store-enhancements.md
docs/strategy/: enterprise-readiness-matrix.md  positioning.md
examples/: attestation.sh  audit-log.sh  bundle-airgap.sh  managed-mode.sh  publish-store.sh  store-loop.sh  store-publish.workflow.yml
tools/: README.md  attest_parity.py  audit_parity.py  bundle_parity.py  catalog_gen.py  policy_parity.py  requirements.txt  selftest.sh  verify_catalog.py
tools/cogstore/: __init__.py  attest.py  audit.py  bundle.py  catalog.py  jcs.py  policy.py  signing.py
(+21 files in other folders)
